# ai-video-watcher

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
tests/: test_extract_transcript.py  test_summarize_video.py
video_summarizer/backend/: api.py  main.py
video_summarizer/backend/configs/: config.py  params.yaml
video_summarizer/backend/src/: chat_video.py  summarize_video.py
video_summarizer/frontend/: server.py  ui.py
