[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video_summarizer"
version = "0.2.0"
authors = [
  { name="John Mwangi", email="john.mwangi@live.com" },
]
description = "Summarise videos using Gen AI"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/john-mwangi/chatgpt-video-summarizer"
Issues = "https://github.com/john-mwangi/chatgpt-video-summarizer/issues"
# Changelog = ""
# Documentation = ""
Homepage = ""

# ref: https://setuptools.pypa.io/en/latest/userguide/package_discovery.html
[tool.setuptools.packages.find]
include = ["chatgpt_ui*"]
exclude = ["docs*", "tests*", "files", "*.env"]

# ref: https://setuptools.pypa.io/en/latest/userguide/datafiles.html
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.yaml"]